Change page color to #eeeff0

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
-  		background-color: #4cf159;
+  		background-color: #eeeff0;
 		  font-family: "Helvetica,Arial,FreeSans"; 
   		color: #000000;
     }
@@ -53,9 +53,12 @@
     </div>
 
     <h2>Authors</h2>
-<p>eidiot (eidiot@gmail.com)<br/><br/>      </p>
+<p>eidiot (eidiot@gmail.com)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>eidiot (eidiot@gmail.com)<br/>      </p>
+<p>eidiot (eidiot@gmail.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
