--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </script>
 		<script type="text/javascript">
 //<![CDATA[
+		swfobject.registerObject("FormExample", "9.0.115", "expressInstall.swf");
 		swfobject.registerObject("HorizontalExample", "9.0.115", "expressInstall.swf");
 		swfobject.registerObject("VerticalExample", "9.0.115", "expressInstall.swf");
 		//]]>
@@ -57,6 +58,21 @@
 			<h2>
 				Examples
 			</h2>
+			<p>
+				<strong>FormExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/FormExample.as" target="_blank" class="liexternal">source</a>)
+			</p>
+			<div>
+				<object id="FormExample" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="320" height="270">
+					<param name="movie" value="examples/FormExample.swf" />
+					<!--[if !IE]>-->
+					<object type="application/x-shockwave-flash" data="examples/FormExample.swf" width="320" height="270">
+						<!--<![endif]-->
+						<p>
+							Alternative content
+						</p><!--[if !IE]>-->
+					</object> <!--<![endif]-->
+				</object>
+			</div>
 			<p>
 				<strong>HorizontalExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/HorizontalExample.as" target="_blank" class="liexternal">source</a>)
 			</p>
