--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 //<![CDATA[
 		swfobject.registerObject("AlignExample", "9.0.115", "expressInstall.swf");
 		swfobject.registerObject("FormExample", "9.0.115", "expressInstall.swf");
-		swfobject.registerObject("HorizontalExample", "9.0.115", "expressInstall.swf");
-		swfobject.registerObject("VerticalExample", "9.0.115", "expressInstall.swf");
+		swfobject.registerObject("HLineExample", "9.0.115", "expressInstall.swf");
+		swfobject.registerObject("VLineExample", "9.0.115", "expressInstall.swf");
 		//]]>
 		</script>
 		<title>
@@ -90,13 +90,13 @@
 				</object>
 			</div>
 			<p>
-				<strong>HorizontalExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/HorizontalExample.as" target="_blank" class="liexternal">source</a>)
+				<strong>HLineExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/HLineExample.as" target="_blank" class="liexternal">source</a>)
 			</p>
 			<div>
-				<object id="HorizontalExample" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="550" height="400">
-					<param name="movie" value="examples/HorizontalExample.swf" />
+				<object id="HLineExample" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="550" height="400">
+					<param name="movie" value="examples/HLineExample.swf" />
 					<!--[if !IE]>-->
-					<object type="application/x-shockwave-flash" data="examples/HorizontalExample.swf" width="550" height="400">
+					<object type="application/x-shockwave-flash" data="examples/HLineExample.swf" width="550" height="400">
 						<!--<![endif]-->
 						<p>
 							Alternative content
@@ -105,13 +105,13 @@
 				</object>
 			</div>
 			<p>
-				<strong>VerticalExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/VerticalExample.as" target="_blank" class="liexternal">source</a>)
+				<strong>VLineExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/VLineExample.as" target="_blank" class="liexternal">source</a>)
 			</p>
 			<div>
-				<object id="VerticalExample" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="550" height="400">
-					<param name="movie" value="examples/VerticalExample.swf" />
+				<object id="VLineExample" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="550" height="400">
+					<param name="movie" value="examples/VLineExample.swf" />
 					<!--[if !IE]>-->
-					<object type="application/x-shockwave-flash" data="examples/VerticalExample.swf" width="550" height="400">
+					<object type="application/x-shockwave-flash" data="examples/VLineExample.swf" width="550" height="400">
 						<!--<![endif]-->
 						<p>
 							Alternative content
