Add Example for HBoxLayout

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </script>
 		<script type="text/javascript">
 //<![CDATA[
+		swfobject.registerObject("HBoxExample", "9.0.115", "expressInstall.swf");
 		swfobject.registerObject("AlignExample", "9.0.115", "expressInstall.swf");
 		swfobject.registerObject("FormExample", "9.0.115", "expressInstall.swf");
 		swfobject.registerObject("HLineExample", "9.0.115", "expressInstall.swf");
@@ -59,6 +60,21 @@
 			<h2>
 				Examples
 			</h2>
+			<p>
+				<strong>HBoxExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/HBoxExample.as" target="_blank" class="liexternal">source</a>)
+			</p>
+			<div>
+				<object id="HBoxExample" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="550" height="400">
+					<param name="movie" value="examples/HBoxExample.swf" />
+					<!--[if !IE]>-->
+					<object type="application/x-shockwave-flash" data="examples/HBoxExample.swf" width="550" height="400">
+						<!--<![endif]-->
+						<p>
+							Alternative content
+						</p><!--[if !IE]>-->
+					</object> <!--<![endif]-->
+				</object>
+			</div>
 			<p>
 				<strong>AlignExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/AlignExample.as" target="_blank" class="liexternal">source</a>)
 			</p>
