--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script type="text/javascript">
 //<![CDATA[
 		swfobject.registerObject("HBoxExample", "9.0.115", "expressInstall.swf");
+		swfobject.registerObject("VBoxExample", "9.0.115", "expressInstall.swf");
 		swfobject.registerObject("AlignExample", "9.0.115", "expressInstall.swf");
 		swfobject.registerObject("FormExample", "9.0.115", "expressInstall.swf");
 		swfobject.registerObject("HLineExample", "9.0.115", "expressInstall.swf");
@@ -68,6 +69,21 @@
 					<param name="movie" value="examples/HBoxExample.swf" />
 					<!--[if !IE]>-->
 					<object type="application/x-shockwave-flash" data="examples/HBoxExample.swf" width="550" height="400">
+						<!--<![endif]-->
+						<p>
+							Alternative content
+						</p><!--[if !IE]>-->
+					</object> <!--<![endif]-->
+				</object>
+			</div>
+			<p>
+				<strong>VBoxExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/VBoxExample.as" target="_blank" class="liexternal">source</a>)
+			</p>
+			<div>
+				<object id="VBoxExample" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="400" height="400">
+					<param name="movie" value="examples/VBoxExample.swf" />
+					<!--[if !IE]>-->
+					<object type="application/x-shockwave-flash" data="examples/VBoxExample.swf" width="400" height="400">
 						<!--<![endif]-->
 						<p>
 							Alternative content
