--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </script>
 		<script type="text/javascript">
 //<![CDATA[
+		swfobject.registerObject("HMultiLineExample", "9.0.115", "expressInstall.swf");
+		swfobject.registerObject("VMultiLineExample", "9.0.115", "expressInstall.swf");
 		swfobject.registerObject("HBoxExample", "9.0.115", "expressInstall.swf");
 		swfobject.registerObject("VBoxExample", "9.0.115", "expressInstall.swf");
 		swfobject.registerObject("AlignExample", "9.0.115", "expressInstall.swf");
@@ -59,10 +61,95 @@
 				Simple layout library for native as3 display objects.
 			</div>
 			<h2>
+				Features
+			</h2>
+			<ul>
+				<li>
+					For native as3 display objects. No Flex or any other dependency.
+				</li>
+				<li>
+					AtomLayout align DisplayObject using getBounds(). No worries about register point in FLA.
+				</li>
+				<li>
+					Easily composite layout elements/groups. No more DisplayObjectContainer needed. (<a href="#FormExampleLink">example</a>)
+				</li>
+			</ul>
+			<h2>
+				How to use
+			</h2>
+			<ul>
+				<li>
+					Create a layout group which implements ILayoutGroup and set layout properties.
+				</li>
+				<li>
+					Add some display objects or other ILayoutElement to the group.
+				</li>
+				<li>
+					Call the layout() method of the group.
+				</li>
+			</ul>
+			<h2>
+				Layout groups
+			</h2>
+			<ul>
+				<li>
+					<strong>HLineLayout</strong> - Horizontal single line layout. (<a href="#HLineExampleLink">example</a>)
+				</li>
+				<li>
+					<strong>VLineLayout</strong> - Vertical single line layout. (<a href="#VLineExampleLink">example</a>)
+				</li>
+				<li>
+					<strong>HMultiLineLayout</strong> - Horizontal multi-line layout. (<a href="#HMultiLineExampleLink">example</a>)
+				</li>
+				<li>
+					<strong>VMultiLineLayout</strong> - Vertical multi-line layout. (<a href="#VMultiLineExampleLink">example</a>)
+				</li>
+				<li>
+					<strong>HBoxLayout</strong> - Horizontal box layout. (<a href="#HBoxExampleLink">example</a>)
+				</li>
+				<li>
+					<strong>VBoxLayout</strong> - Vertical box layout.(<a href="#VBoxExampleLink">example</a>)
+				</li>
+				<li>
+					<strong>AlignLayout</strong> - Align position group layout. (<a href="#AlignExampleLink">example</a>)
+				</li>
+			</ul>
+			<span><strong>*Note</strong> difference between MultiLineLayout and BoxLayout: Lines in HBoxLayout has the same height as the lineHeight property, while height of lines in HBoxLayout according to the max height of elements in each line. </span>
+			<h2>
 				Examples
 			</h2>
 			<p>
-				<strong>HBoxExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/HBoxExample.as" target="_blank" class="liexternal">source</a>)
+				<a name="HMultiLineExampleLink" id="HMultiLineExampleLink"></a><strong>HMultiLineExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/HMultiLineExample.as" target="_blank" class="liexternal">source</a>)
+			</p>
+			<div>
+				<object id="HMultiLineExample" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="550" height="400">
+					<param name="movie" value="examples/HMultiLineExample.swf" />
+					<!--[if !IE]>-->
+					<object type="application/x-shockwave-flash" data="examples/HMultiLineExample.swf" width="550" height="400">
+						<!--<![endif]-->
+						<p>
+							Alternative content
+						</p><!--[if !IE]>-->
+					</object> <!--<![endif]-->
+				</object>
+			</div>
+			<p>
+				<a name="VMultiLineExampleLink" id="VMultiLineExampleLink"></a><strong>VMultiLineExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/VMultiLineExample.as" target="_blank" class="liexternal">source</a>)
+			</p>
+			<div>
+				<object id="VMultiLineExample" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="400" height="400">
+					<param name="movie" value="examples/VMultiLineExample.swf" />
+					<!--[if !IE]>-->
+					<object type="application/x-shockwave-flash" data="examples/VMultiLineExample.swf" width="400" height="400">
+						<!--<![endif]-->
+						<p>
+							Alternative content
+						</p><!--[if !IE]>-->
+					</object> <!--<![endif]-->
+				</object>
+			</div>
+			<p>
+				<a name="HBoxExampleLink" id="HBoxExampleLink"></a><strong>HBoxExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/HBoxExample.as" target="_blank" class="liexternal">source</a>)
 			</p>
 			<div>
 				<object id="HBoxExample" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="550" height="400">
@@ -77,7 +164,7 @@
 				</object>
 			</div>
 			<p>
-				<strong>VBoxExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/VBoxExample.as" target="_blank" class="liexternal">source</a>)
+				<a name="VBoxExampleLink" id="VBoxExampleLink"></a><strong>VBoxExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/VBoxExample.as" target="_blank" class="liexternal">source</a>)
 			</p>
 			<div>
 				<object id="VBoxExample" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="400" height="400">
@@ -92,7 +179,7 @@
 				</object>
 			</div>
 			<p>
-				<strong>AlignExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/AlignExample.as" target="_blank" class="liexternal">source</a>)
+				<a name="AlignExampleLink" id="AlignExampleLink"></a><strong>AlignExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/AlignExample.as" target="_blank" class="liexternal">source</a>)
 			</p>
 			<div>
 				<object id="AlignExample" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="300" height="200">
@@ -107,7 +194,7 @@
 				</object>
 			</div>
 			<p>
-				<strong>FormExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/FormExample.as" target="_blank" class="liexternal">source</a>)
+				<a name="FormExampleLink" id="FormExampleLink"></a><strong>FormExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/FormExample.as" target="_blank" class="liexternal">source</a>)
 			</p>
 			<div>
 				<object id="FormExample" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="320" height="270">
@@ -122,7 +209,7 @@
 				</object>
 			</div>
 			<p>
-				<strong>HLineExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/HLineExample.as" target="_blank" class="liexternal">source</a>)
+				<a name="HLineExampleLink" id="HLineExampleLink"></a><strong>HLineExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/HLineExample.as" target="_blank" class="liexternal">source</a>)
 			</p>
 			<div>
 				<object id="HLineExample" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="550" height="400">
@@ -137,7 +224,7 @@
 				</object>
 			</div>
 			<p>
-				<strong>VLineExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/VLineExample.as" target="_blank" class="liexternal">source</a>)
+				<a name="VLineExampleLink" id="VLineExampleLink"></a><strong>VLineExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/VLineExample.as" target="_blank" class="liexternal">source</a>)
 			</p>
 			<div>
 				<object id="VLineExample" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="550" height="400">
