--- a/zh.html
+++ b/zh.html
@@ -57,36 +57,36 @@
 			<h1>
 				<a href="http://github.com/eidiot/xrope">xrope</a> <span class="small">by <a href="http://github.com/eidiot">eidiot</a></span>
 			</h1>
-			<span>English | <a href="zh.html">中文</a></span>
+			<span><a href="index.html">English</a> | 中文</span>
 			<div class="description">
-				Simple layout library for native as3 display objects.
+				用于原生AS3显示对象的简单layout库。
 			</div>
 			<h2>
-				Features
+				特点
 			</h2>
 			<ul>
 				<li>
-					For native as3 display objects. No Flex or any other dependency.
+					用于原生AS3显示对象，没有Flex或任何其它依赖。
 				</li>
 				<li>
-					AtomLayout align DisplayObject using getBounds(). No worries about register point in FLA.
+					AtomLayout 使用 getBounds() 排列显示对象，不用担心注册点问题。
 				</li>
 				<li>
-					Easily composite layout elements/groups. No more DisplayObjectContainer needed. (<a href="#FormExampleLink">example</a>)
+					组合 layout 元素/组 非常容易，不需要额外的显示容器。 (example)
 				</li>
 			</ul>
 			<h2>
-				How to use
+				如何使用
 			</h2>
 			<ul>
 				<li>
-					Create a layout group which implements ILayoutGroup and set layout properties.
+					创建一个实现 ILayoutGroup 接口的 layout group 并根据需要设置属性。
 				</li>
 				<li>
-					Add some display objects or other ILayoutElement to the group.
+					添加显示对象或其它 ILayoutElement。
 				</li>
 				<li>
-					Call the layout() method of the group.
+					调用 layout() 方法
 				</li>
 			</ul>
 			<h2>
@@ -94,28 +94,28 @@
 			</h2>
 			<ul>
 				<li>
-					<strong>HLineLayout</strong> - Horizontal single line layout. (<a href="#HLineExampleLink">example</a>)
+					<strong>HLineLayout</strong> - 水平单行 layout. (<a href="#HLineExampleLink">example</a>)
 				</li>
 				<li>
-					<strong>VLineLayout</strong> - Vertical single line layout. (<a href="#VLineExampleLink">example</a>)
+					<strong>VLineLayout</strong> - 垂直单行 layout. (<a href="#VLineExampleLink">example</a>)
 				</li>
 				<li>
-					<strong>HMultiLineLayout</strong> - Horizontal multi-line layout. (<a href="#HMultiLineExampleLink">example</a>)
+					<strong>HMultiLineLayout</strong> - 水平多行 layout. (<a href="#HMultiLineExampleLink">example</a>)
 				</li>
 				<li>
-					<strong>VMultiLineLayout</strong> - Vertical multi-line layout. (<a href="#VMultiLineExampleLink">example</a>)
+					<strong>VMultiLineLayout</strong> 垂直多行 layout. (<a href="#VMultiLineExampleLink">example</a>)
 				</li>
 				<li>
-					<strong>HBoxLayout</strong> - Horizontal box layout. (<a href="#HBoxExampleLink">example</a>)
+					<strong>HBoxLayout</strong> - 水平 box layout. (<a href="#HBoxExampleLink">example</a>)
 				</li>
 				<li>
-					<strong>VBoxLayout</strong> - Vertical box layout.(<a href="#VBoxExampleLink">example</a>)
+					<strong>VBoxLayout</strong> - 垂直 box layout.(<a href="#VBoxExampleLink">example</a>)
 				</li>
 				<li>
-					<strong>AlignLayout</strong> - Align position group layout. (<a href="#AlignExampleLink">example</a>)
+					<strong>AlignLayout</strong> - Align 位置 group layout. (<a href="#AlignExampleLink">example</a>)
 				</li>
 			</ul>
-			<span><strong>*Note</strong> difference between MultiLineLayout and BoxLayout: Lines in MultiLineLayout has the same height as the lineHeight property, while height of lines in HBoxLayout according to the max height of elements in each line. </span>
+			<span><strong>*注意</strong> MultiLineLayout 和 BoxLayout 的区别:  MultiLineLayout 里所有行的高度都和 lineHeight 属性一样，而 BoxLayout 各行的高度为行中最高元素的高度</span>
 			<h2>
 				<a name="ExamplesLink" id="ExamplesLink"></a>Examples
 			</h2>
@@ -240,32 +240,32 @@
 				</object>
 			</div>
 			<h2>
-				Authors
+				作者
 			</h2>
 			<p>
 				eidiot (eidiot@gmail.com)<br />
 				<br />
 			</p>
 			<h2>
-				Contact
+				联系
 			</h2>
 			<p>
 				eidiot (eidiot@gmail.com)<br />
 			</p>
 			<h2>
-				Download
+				下载
 			</h2>
 			<p>
-				You can download this project in either <a href="http://github.com/eidiot/xrope/zipball/master">zip</a> or <a href="http://github.com/eidiot/xrope/tarball/master">tar</a> formats.
+				你可以下载 <a href="http://github.com/eidiot/xrope/zipball/master">zip</a> 或者 <a href="http://github.com/eidiot/xrope/tarball/master">tar</a> 格式.
 			</p>
 			<p>
-				You can also clone the project with <a href="http://git-scm.com">Git</a> by running:
+				你也可以使用 <a href="http://git-scm.com">Git</a> clone 项目:
 			</p>
 			<pre>
 $ git clone git://github.com/eidiot/xrope
 </pre>
 			<div class="footer">
-				get the source code on GitHub : <a href="http://github.com/eidiot/xrope">eidiot/xrope</a>
+				从 GitHub 获取源代码 : <a href="http://github.com/eidiot/xrope">eidiot/xrope</a>
 			</div>
 		</div>
 	</body>
