--- a/zh.html
+++ b/zh.html
@@ -72,7 +72,7 @@
 					AtomLayout 使用 getBounds() 排列显示对象，不用担心注册点问题。
 				</li>
 				<li>
-					组合 layout 元素/组 非常容易，不需要额外的显示容器。 (example)
+					组合 layout 元素/组 非常容易，不需要额外的显示容器。 (<a href="#FormExampleLink">example</a>)
 				</li>
 			</ul>
 			<h2>
