--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </script>
 		<script type="text/javascript">
 //<![CDATA[
+		swfobject.registerObject("GridExample", "9.0.115", "expressInstall.swf");
 		swfobject.registerObject("HMultiLineExample", "9.0.115", "expressInstall.swf");
 		swfobject.registerObject("VMultiLineExample", "9.0.115", "expressInstall.swf");
 		swfobject.registerObject("HBoxExample", "9.0.115", "expressInstall.swf");
@@ -114,11 +115,29 @@
 				<li>
 					<strong>AlignLayout</strong> - Align position group layout. (<a href="#AlignExampleLink">example</a>)
 				</li>
+				<li>
+					<strong>GridLayout</strong> - Grid layout. (<a href="#GridExampleLink">example</a>)
+				</li>
 			</ul>
 			<span><strong>*Note</strong> difference between MultiLineLayout and BoxLayout: Lines in MultiLineLayout has the same height as the lineHeight property, while height of lines in HBoxLayout according to the max height of elements in each line. </span>
 			<h2>
 				<a name="ExamplesLink" id="ExamplesLink"></a>Examples
 			</h2>
+			<p>
+				<a name="GridExampleLink" id="GridExampleLink"></a><strong>GridExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/GridExample.as" target="_blank" class="liexternal">source</a>)
+			</p>
+			<div>
+				<object id="GridExample" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="550" height="400">
+					<param name="movie" value="examples/GridExample.swf" />
+					<!--[if !IE]>-->
+					<object type="application/x-shockwave-flash" data="examples/GridExample.swf" width="550" height="400">
+						<!--<![endif]-->
+						<p>
+							Alternative content
+						</p><!--[if !IE]>-->
+					</object> <!--<![endif]-->
+				</object>
+			</div>
 			<p>
 				<a name="HMultiLineExampleLink" id="HMultiLineExampleLink"></a><strong>HMultiLineExample:</strong> (<a href="http://github.com/eidiot/xrope/blob/master/examples/HMultiLineExample.as" target="_blank" class="liexternal">source</a>)
 			</p>
