Update for useBounds property

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					For native as3 display objects. No Flex or any other dependency.
 				</li>
 				<li>
-					AtomLayout align DisplayObject using getBounds(). No worries about register point in FLA.
+					AtomLayout align DisplayObject using getBounds(). No worries about register point in FLA. (Set useBounds to true, it’s false by default)
 				</li>
 				<li>
 					Easily composite layout elements/groups. No more DisplayObjectContainer needed. (<a href="#FormExampleLink">example</a>)
