--- a/zh.html
+++ b/zh.html
@@ -70,7 +70,7 @@
 					用于原生AS3显示对象，没有Flex或任何其它依赖。
 				</li>
 				<li>
-					AtomLayout 使用 getBounds() 排列显示对象，不用担心注册点问题。
+					AtomLayout 使用 getBounds() 排列显示对象，不用担心注册点问题。(设置 useBounds 属性为 true, 默认为 false)
 				</li>
 				<li>
 					组合 layout 元素/组 非常容易，不需要额外的显示容器。 (<a href="#FormExampleLink">example</a>)
