--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </script>
 		<script type="text/javascript">
 //<![CDATA[
+		swfobject.registerObject("Demo", "9.0.115", "expressInstall.swf");
 		swfobject.registerObject("GridExample", "9.0.115", "expressInstall.swf");
 		swfobject.registerObject("HMultiLineExample", "9.0.115", "expressInstall.swf");
 		swfobject.registerObject("VMultiLineExample", "9.0.115", "expressInstall.swf");
@@ -120,6 +121,21 @@
 				</li>
 			</ul>
 			<span><strong>*Note</strong> difference between MultiLineLayout and BoxLayout: Lines in MultiLineLayout has the same height as the lineHeight property, while height of lines in HBoxLayout according to the max height of elements in each line. </span>
+			<h2>
+				<a name="DemoLink" id="DemoLink"></a>Demo (<a href="http://github.com/eidiot/XropeDemo" target="_blank" class="liexternal">source</a>)
+			</h2>
+			<div>
+				<object id="Demo" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="550" height="400">
+					<param name="movie" value="demo/XropeDemo.swf" />
+					<!--[if !IE]>-->
+					<object type="application/x-shockwave-flash" data="demo/XropeDemo.swf" width="550" height="400">
+						<!--<![endif]-->
+						<p>
+							Alternative content
+						</p><!--[if !IE]>-->
+					</object> <!--<![endif]-->
+				</object>
+			</div>
 			<h2>
 				<a name="ExamplesLink" id="ExamplesLink"></a>Examples
 			</h2>
