--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		//]]>
 		</script>
 		<title>
-			eidiot/xrope @ GitHub
+			evan-liu/xrope @ GitHub
 		</title>
 		<style type="text/css">
 /*<![CDATA[*/
@@ -41,14 +41,14 @@
 	</head>
 	<body>
 		<p>
-			<a href="http://github.com/eidiot/xrope"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+			<a href="http://github.com/evan-liu/xrope"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 		</p>
 		<div id="container">
 			<div class="download">
-				<a href="http://github.com/eidiot/xrope/zipball/master"><img border="0" width="90" src="http://github.com/images/modules/download/zip.png" /></a> <a href="http://github.com/eidiot/xrope/tarball/master"><img border="0" width="90" src="http://github.com/images/modules/download/tar.png" /></a>
+				<a href="http://github.com/evan-liu/xrope/zipball/master"><img border="0" width="90" src="http://github.com/images/modules/download/zip.png" /></a> <a href="http://github.com/evan-liu/xrope/tarball/master"><img border="0" width="90" src="http://github.com/images/modules/download/tar.png" /></a>
 			</div>
 			<h1>
-				<a href="http://github.com/eidiot/xrope">xrope</a> <span class="small">by <a href="http://github.com/eidiot">eidiot</a></span>
+				<a href="http://github.com/evan-liu/xrope">xrope</a>
 			</h1>
 			<span>English | <a href="zh.html">中文</a></span>
 			<div class="description">
@@ -56,7 +56,7 @@
 			</div>
 			
 			<h2>
-				<a name="DemoLink" id="DemoLink"></a>Demo (<a href="https://github.com/eidiot/xrope/tree/master/examples" target="_blank" class="liexternal">source</a>)
+				<a name="DemoLink" id="DemoLink"></a>Demo (<a href="https://github.com/evan-liu/xrope/tree/master/examples" target="_blank" class="liexternal">source</a>)
 			</h2>
 			<div>
 				<object id="Demo" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="550" height="400">
@@ -140,29 +140,24 @@
 				Authors
 			</h2>
 			<p>
-				eidiot (eidiot@gmail.com)<br />
+				Evan Liu (evancoding@gmail.com)<br />
 				<br />
 			</p>
-			<h2>
-				Contact
-			</h2>
-			<p>
-				eidiot (eidiot@gmail.com)<br />
-			</p>
+			
 			<h2>
 				Download
 			</h2>
 			<p>
-				You can download this project in either <a href="http://github.com/eidiot/xrope/zipball/master">zip</a> or <a href="http://github.com/eidiot/xrope/tarball/master">tar</a> formats.
+				You can download this project in either <a href="http://github.com/evan-liu/xrope/zipball/master">zip</a> or <a href="http://github.com/evan-liu/xrope/tarball/master">tar</a> formats.
 			</p>
 			<p>
 				You can also clone the project with <a href="http://git-scm.com">Git</a> by running:
 			</p>
 			<pre>
-$ git clone git://github.com/eidiot/xrope
-</pre>
+			$ git clone git://github.com/evan-liu/xrope
+			</pre>
 			<div class="footer">
-				get the source code on GitHub : <a href="http://github.com/eidiot/xrope">eidiot/xrope</a>
+				get the source code on GitHub : <a href="http://github.com/evan-liu/xrope">evan-liu/xrope</a>
 			</div>
 		</div>
 	</body>
